Adjust Profile Section

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             class="project-img"/>
             <h2 class="experience-sub-title project-title">To Do List (Flutter)</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='http://githut.com'">GitHub</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/ToDoList'">GitHub</button>
               
             </div>
           </div>
@@ -238,7 +238,7 @@
             class="project-img"/>
             <h2 class="experience-sub-title project-title">Survey Form (HTML&CSS)</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='http://githut.com'">GitHub</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/Survey-Form'">GitHub</button>
        
             </div>
           </div>
