--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
             <h1 class="title">Augustus Pham</h1>
             <p class="section__text__p2">Mathematics and Computer Science Undergraduate Student</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV
-
-                </button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'"> Contact
                 </button>
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="Linked In" class="icon"
-                    onclick="location.href='www.linkedin.com/in/hau-pham-794888301'" />
+                    onclick="location.href='https://www.linkedin.com/in/hau-pham-794888301'" />
                 <img src="./assets/github.png" alt="Github" class="icon" onclick="location.href='https://github.com/hauhaupham1'" />
             </div>
         </div>
@@ -278,7 +276,7 @@
           src="./assets/linkedin.png" 
           alt="linkedin icon"
           class="icon contact-icon">
-          <p><a href="www.linkedin.com/in/hau-pham-794888301">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/hau-pham-794888301">LinkedIn</a></p>
         </div>
       </div>
     </section>
