--- a/index.html
+++ b/index.html
@@ -241,19 +241,19 @@
             </div>
           </div>
         </div>
-        <!-- <div class="details-container color-container">
+        <div class="details-container color-container">
           <div class="article-container">
             <img 
-            src="./assets/Untitled.png" 
-            alt="Project 1"
-            class="project-img"/>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            src="./assets/card-games-simple-black-line-web-icon-illustration-editable-stroke-48x48-pixel-perfect-free-vector.jpg" 
+            alt="Fishing Card Game"
+            class="project-img fish"/>
+            <h2 class="experience-sub-title project-title">Fishing Game Card</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='http://githut.com'">GitHub</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/Fishing-Card-Game'">GitHub</button>
              
             </div>
           </div>
-        </div> -->
+        </div>
        </div>
       </div>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
