--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers"> 
-        <div class="details-container color-container">
+        <div class="details-container-experience color-container">
           <div class="article-container">
+            <div class="image-format">
             <img 
-            src="./assets/todolist.png" 
+            src="./assets/check-list.png" 
             alt="Project 1"
-            class="project-img"/>
+            class="project-img"/> </div>
             <h2 class="experience-sub-title project-title">To Do List (Flutter)</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/ToDoList'">GitHub</button>
@@ -228,25 +229,27 @@
             </div>
           </div>
         </div>
-        <div class="details-container color-container">
+        <div class="details-container-experience color-container">
           <div class="article-container">
+            <div class="image-format">
             <img 
             src="./assets/survey.png" 
             alt="Project 1"
-            class="project-img"/>
+            class="project-img"/> </div>
             <h2 class="experience-sub-title project-title">Survey Form (HTML&CSS)</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/Survey-Form'">GitHub</button>
-       
             </div>
           </div>
         </div>
-        <div class="details-container color-container">
+        <div class="details-container-experience color-container">
           <div class="article-container">
+            <div class="image-format">
             <img 
-            src="./assets/card-games-simple-black-line-web-icon-illustration-editable-stroke-48x48-pixel-perfect-free-vector.jpg" 
+            src="./assets/card-game.png" 
             alt="Fishing Card Game"
-            class="project-img fish"/>
+            class="project-img"/> 
+          </div>
             <h2 class="experience-sub-title project-title">Fishing Game Card</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/Fishing-Card-Game'">GitHub</button>
