--- a/index.html
+++ b/index.html
@@ -257,6 +257,36 @@
             </div>
           </div>
         </div>
+        <div class="details-container-experience color-container">
+          <div class="article-container">
+            <div class="image-format">
+            <img 
+            src="./assets/hierarchical.png" 
+            alt="Data Structures"
+            class="project-img"/> 
+          </div>
+            <h2 class="experience-sub-title project-title">Data Structures</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/Data-Structures'">GitHub</button>
+             
+            </div>
+          </div>
+        </div>
+        <div class="details-container-experience color-container">
+          <div class="article-container">
+            <div class="image-format">
+            <img 
+            src="./assets/project.png" 
+            alt="Data Structures"
+            class="project-img"/> 
+          </div>
+            <h2 class="experience-sub-title project-title">Old Programs</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/Old-Java-C---Programs'">GitHub</button>
+             
+            </div>
+          </div>
+        </div>
        </div>
       </div>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow"
