--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img src="./assets/sanfran.png" alt="Augustus's profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello, I'm</p>
+            <p class="section__text__p1">Hello, I am</p>
             <h1 class="title">Augustus Pham</h1>
             <p class="section__text__p2">Mathematics and Computer Science Undergraduate Student</p>
             <div class="btn-container">
@@ -225,7 +225,19 @@
             <h2 class="experience-sub-title project-title">To Do List (Flutter)</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/ToDoList'">GitHub</button>
-              
+            </div>
+          </div>
+        </div>
+        <div class="details-container-experience color-container">
+          <div class="article-container">
+            <div class="image-format">
+            <img 
+            src="./assets/weather-app.png" 
+            alt="Project 1"
+            class="project-img"/> </div>
+            <h2 class="experience-sub-title project-title">Weather App (Flutter)</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/hauhaupham1/weatherapp'">GitHub</button>
             </div>
           </div>
         </div>
